--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,7 +1,7 @@
 name: Maven Central Repo Deployment
 on:
-  release:
-    types: [main]
+  push:
+    branches: [ main ]
 jobs:
   publish:
     runs-on: ubuntu-latest
