--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,7 +1,7 @@
 name: Maven Central Repo Deployment
 on:
-  push:
-    branches: [ main ]
+  release:
+    types: [released]
 jobs:
   release:
     runs-on: ubuntu-18.04
